--- a/src/constance/Cargo.toml
+++ b/src/constance/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tokenlock = { version = "0.3.0", default-features = false }
