--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,11 @@ members = [
     "src/constance",
     "src/constance_port_std",
 ]
+
+[patch.crates-io.atomic_ref]
+# - “Make the crate `no_std`”
+#   <https://github.com/mystor/atomic_ref/pull/1>
+# - “Make `AtomicRef::new` `const fn` (nightly-only)”
+#   <https://github.com/mystor/atomic_ref/pull/2>
+git = "https://github.com/yvt/atomic_ref.git"
+rev = "37523c17a2a535f4d04c204d65d2742647abed25"
