feat(utils): add `BinaryInteger`
Source: <https://github.com/yvt/ngspades/blob/7e1a08a44a61b505edde719a8f1762952033c251/EngineCore/src/zangfx/src/common/src/int.rs>

--- a/src/constance/Cargo.toml
+++ b/src/constance/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2018"
 [dependencies]
 tokenlock = { version = "0.3.0", default-features = false }
 atomic_ref = { version = "0.1", features = ["nightly"] }
+num-integer = "0.1.42"
