--- a/src/constance/Cargo.toml
+++ b/src/constance/Cargo.toml
@@ -10,3 +10,8 @@ edition = "2018"
 tokenlock = { version = "0.3.0", default-features = false }
 atomic_ref = { version = "0.1", features = ["nightly"] }
 num-integer = "0.1.42"
+
+[dev-dependencies]
+quickcheck = "0.9.2"
+quickcheck_macros = "0.9.1"
+log = "0.4.8"
