refactor(port_std): wrap `TaskState::thread` with `Mutex`
Makes it safe to unset so that we can implement task termination
(without leaking memory) in the future.

--- a/src/constance_port_std/Cargo.toml
+++ b/src/constance_port_std/Cargo.toml
@@ -9,3 +9,4 @@ atomic_ref = { version = "0.1", features = ["nightly"] }
 constance = { path = "../constance" }
 log = "0.4.8"
 env_logger = "0.7.1"
+parking_lot = "0.10.2"
