feat(kernel): add `Kernel::exit_task`

--- a/src/constance_port_std/Cargo.toml
+++ b/src/constance_port_std/Cargo.toml
@@ -10,3 +10,10 @@ constance = { path = "../constance" }
 log = "0.4.8"
 env_logger = "0.7.1"
 parking_lot = "0.10.2"
+
+[target."cfg(unix)".dependencies]
+libc = "0.2.71"
+
+[target."cfg(windows)".dependencies]
+winapi = { version = "0.3.8", features = ["processthreadsapi"] }
+
