--- a/src/constance/Cargo.toml
+++ b/src/constance/Cargo.toml
@@ -11,6 +11,7 @@ tokenlock = { version = "0.3.0", default-features = false }
 atomic_ref = { version = "0.1", features = ["nightly"] }
 num-integer = "0.1.42"
 num-traits = "0.2.11"
+bitflags = "1.2.1"
 
 [dev-dependencies]
 quickcheck = "0.9.2"
