--- a/src/constance/Cargo.toml
+++ b/src/constance/Cargo.toml
@@ -12,6 +12,7 @@ atomic_ref = { version = "0.1", features = ["nightly"] }
 num-integer = "0.1.42"
 num-traits = "0.2.11"
 bitflags = "1.2.1"
+parse-generics-shim = { version = "0.1.1" }
 
 [dev-dependencies]
 quickcheck = "0.9.2"
