--- a/src/constance/Cargo.toml
+++ b/src/constance/Cargo.toml
@@ -13,6 +13,7 @@ num-integer = "0.1.42"
 num-traits = "0.2.11"
 bitflags = "1.2.1"
 parse-generics-shim = { version = "0.1.1" }
+svgbobdoc = "0.2.2"
 
 [dev-dependencies]
 quickcheck = "0.9.2"
