--- a/src/constance/Cargo.toml
+++ b/src/constance/Cargo.toml
@@ -14,6 +14,7 @@ num-traits = "0.2.11"
 bitflags = "1.2.1"
 parse-generics-shim = { version = "0.1.1" }
 svgbobdoc = "0.2.2"
+staticvec = { version = "0.10.1", default-features = false }
 
 [dev-dependencies]
 quickcheck = "0.9.2"
