--- a/src/constance/Cargo.toml
+++ b/src/constance/Cargo.toml
@@ -17,6 +17,7 @@ svgbobdoc = "0.2.2"
 staticvec = { version = "0.10.1", default-features = false }
 
 [dev-dependencies]
+env_logger = "0.7.1"
 quickcheck = "0.9.2"
 quickcheck_macros = "0.9.1"
 log = "0.4.8"
