--- a/src/constance/Cargo.toml
+++ b/src/constance/Cargo.toml
@@ -15,6 +15,7 @@ bitflags = "1.2.1"
 parse-generics-shim = { version = "0.1.1" }
 svgbobdoc = "0.2.2"
 staticvec = { version = "0.10.1", default-features = false }
+pin-utils = "0.1.0"
 
 [dev-dependencies]
 env_logger = "0.7.1"
