--- a/src/constance_port_std/Cargo.toml
+++ b/src/constance_port_std/Cargo.toml
@@ -10,6 +10,7 @@ constance = { path = "../constance" }
 log = "0.4.8"
 env_logger = "0.7.1"
 parking_lot = "0.10.2"
+once_cell = "1.4.0"
 
 [dev-dependencies]
 constance_test_suite = { path = "../constance_test_suite" }
