refactor(port_std): replace `parking_lot::Mutex` with `try_lock::TryLock`
Reduces the code size overhead. Saves the compilation time.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,13 @@ rev = "37523c17a2a535f4d04c204d65d2742647abed25"
 # <https://github.com/DanielKeep/rust-parse-generics/pull/5>
 git = "https://github.com/yvt/rust-parse-generics.git"
 rev = "8e8d9b296a6ff98cdc77e5bbd95b59392d4c8829"
+
+[patch.crates-io.try-lock]
+# - “Make `TryLock::new` `const fn`”
+#   <https://github.com/seanmonstar/try-lock/pull/2>
+# - “Deprecate `try_lock_order`, introduce `try_lock_explicit[_unchecked]`”
+#   <https://github.com/seanmonstar/try-lock/pull/3>
+# - “Make the crate no-std”
+#   <https://github.com/seanmonstar/try-lock/pull/4>
+git = "https://github.com/yvt/try-lock.git"
+rev = "287f9a965a7b19761824a6545959dd1e0fe8cf3e"
