--- a/src/constance_port_std/Cargo.toml
+++ b/src/constance_port_std/Cargo.toml
@@ -9,8 +9,8 @@ atomic_ref = { version = "0.1", features = ["nightly"] }
 constance = { path = "../constance" }
 log = "0.4.8"
 env_logger = "0.7.1"
-parking_lot = "0.10.2"
 once_cell = "1.4.0"
+try-lock = "0.2.2"
 
 [dev-dependencies]
 constance_test_suite = { path = "../constance_test_suite" }
