--- a/src/constance/Cargo.toml
+++ b/src/constance/Cargo.toml
@@ -3,8 +3,7 @@ name = "constance"
 version = "0.0.1"
 authors = ["yvt <i@yvt.jp>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+license = "MIT OR Apache-2.0"
 
 [dependencies]
 tokenlock = { version = "0.3.0", default-features = false }
