--- a/src/constance_test_suite/Cargo.toml
+++ b/src/constance_test_suite/Cargo.toml
@@ -3,6 +3,7 @@ name = "constance_test_suite"
 version = "0.0.1"
 authors = ["yvt <i@yvt.jp>"]
 edition = "2018"
+license = "MIT OR Apache-2.0"
 
 [features]
 default = ["tests_all"]
