--- a/src/constance_test_suite/Cargo.toml
+++ b/src/constance_test_suite/Cargo.toml
@@ -4,6 +4,10 @@ version = "0.0.1"
 authors = ["yvt <i@yvt.jp>"]
 edition = "2018"
 license = "MIT OR Apache-2.0"
+categories = ["embedded", "no-std", "development-tools::testing"]
+description = "Test suite for Constance"
+keywords = ["constance"]
+repository = "https://github.com/yvt/Constance"
 
 [features]
 default = ["tests_all"]
