--- a/examples/basic/Cargo.toml
+++ b/examples/basic/Cargo.toml
@@ -3,6 +3,7 @@ name = "constance_example_basic"
 version = "0.1.0"
 authors = ["yvt <i@yvt.jp>"]
 edition = "2018"
+publish = false
 
 [dependencies]
 constance = { path = "../../src/constance" }
