--- a/src/constance_port_std/Cargo.toml
+++ b/src/constance_port_std/Cargo.toml
@@ -9,12 +9,25 @@ keywords = ["constance", "simulator"]
 repository = "https://github.com/yvt/Constance"
 
 [dependencies]
-atomic_ref = { version = "0.1", features = ["nightly"] }
 constance = { path = "../constance" }
 log = "0.4.8"
 env_logger = "0.7.1"
 once_cell = "1.4.0"
-try-lock = "0.2.2"
+
+[dependencies.atomic_ref]
+# - “Make the crate `no_std`”
+#   <https://github.com/mystor/atomic_ref/pull/1>
+# - “Make `AtomicRef::new` `const fn` (nightly-only)”
+#   <https://github.com/mystor/atomic_ref/pull/2>
+git = "https://github.com/yvt/atomic_ref.git"
+rev = "37523c17a2a535f4d04c204d65d2742647abed25"
+features = ["nightly"]
+
+[dependencies.try-lock]
+# - “Make `TryLock::new` `const fn`”
+#   <https://github.com/seanmonstar/try-lock/pull/2>
+git = "https://github.com/yvt/try-lock.git"
+rev = "cf06bc26a49d511bec22aa36fb68a882e8713d3b"
 
 [dev-dependencies]
 constance_test_suite = { path = "../constance_test_suite" }
