--- a/src/constance/Cargo.toml
+++ b/src/constance/Cargo.toml
@@ -19,12 +19,7 @@ svgbobdoc = "0.2.2"
 staticvec = { version = "0.10.1", default-features = false }
 pin-utils = "0.1.0"
 chrono = { version = "0.4.13", optional = true, default-features = false }
-
-[dependencies.parse-generics-shim]
-# “Support Rust 2018 style imports”
-# <https://github.com/DanielKeep/rust-parse-generics/pull/5>
-git = "https://github.com/yvt/rust-parse-generics.git"
-rev = "8e8d9b296a6ff98cdc77e5bbd95b59392d4c8829"
+parse-generics-shim = { path = "../constance_parse_generics" }
 
 [dependencies.atomic_ref]
 # - “Make the crate `no_std`”
