--- a/src/constance_port_arm_m/Cargo.toml
+++ b/src/constance_port_arm_m/Cargo.toml
@@ -11,6 +11,8 @@ repository = "https://github.com/yvt/Constance"
 
 [dependencies]
 constance = { path = "../constance" }
+cortex-m = "0.6.2"
+cortex-m-rt = "0.6.12"
 
 [dev-dependencies]
 constance_test_suite = { path = "../constance_test_suite" }
