test(port_arm_m): add test driver and runner (WIP)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ members = [
     "src/constance",
     "src/constance_parse_generics",
     "src/constance_port_arm_m",
+    "src/constance_port_arm_m_test_driver",
+    "src/constance_port_arm_m_test_runner",
     "src/constance_port_std",
     "src/constance_test_suite",
 ]
