--- a/src/constance_port_arm_m_test_runner/Cargo.toml
+++ b/src/constance_port_arm_m_test_runner/Cargo.toml
@@ -16,3 +16,5 @@ thiserror = "1.0.20"
 miniserde = "0.1.13"
 structopt = "0.3.15"
 lazy_static = "1.4.0"
+probe-rs = "0.8.0"
+probe-rs-rtt = "0.3.0"
