--- a/src/constance_port_arm_m_test_runner/Cargo.toml
+++ b/src/constance_port_arm_m_test_runner/Cargo.toml
@@ -11,10 +11,12 @@ constance_test_suite = { path = "../constance_test_suite", default-features = fa
 env_logger = { version = "0.7.1", default-features = false, features = ["atty", "termcolor", "humantime"] }
 log = "0.4.8"
 tempdir = "0.3.7"
-tokio = { version = "0.2.21", features = ["process", "macros", "time", "io-util", "fs"] }
+tokio = { version = "0.2.21", features = ["process", "macros", "time", "io-util", "fs", "blocking"] }
 thiserror = "1.0.20"
 miniserde = "0.1.13"
 structopt = "0.3.15"
 lazy_static = "1.4.0"
 probe-rs = "0.8.0"
 probe-rs-rtt = "0.3.0"
+aho-corasick = "0.7.13"
+goblin = { version = "0.2.3", default-features = false, features = ["std", "elf32"] }
