--- a/examples/basic_nucleo_f401re/Cargo.toml
+++ b/examples/basic_nucleo_f401re/Cargo.toml
@@ -5,7 +5,10 @@ authors = ["yvt <i@yvt.jp>"]
 edition = "2018"
 publish = false
 
-[dependencies]
+# `cortex-m-rt` and other crates don't build on a hosted target. We don't want
+# `cargo test --all` to fail because of this, so we put dependencies in the
+# target-specific section.
+[target."cfg(target_os = \"none\")".dependencies]
 constance = { path = "../../src/constance" }
 constance_port_arm_m = { path = "../../src/constance_port_arm_m" }
 nucleo-f401re = "0.4.1"
