--- a/examples/basic_nucleo_f401re/Cargo.toml
+++ b/examples/basic_nucleo_f401re/Cargo.toml
@@ -11,6 +11,7 @@ publish = false
 [target."cfg(target_os = \"none\")".dependencies]
 constance = { path = "../../src/constance" }
 constance_port_arm_m = { path = "../../src/constance_port_arm_m" }
+cortex-m-rt = "0.6.12"
 nucleo-f401re = "0.4.1"
 panic-rtt-target = { version = "0.1.0", features = ["cortex-m"] }
 rtt-target = { version = "0.2.0", features = ["cortex-m"] }
