--- a/src/constance_port_arm_m_test_driver/Cargo.toml
+++ b/src/constance_port_arm_m_test_driver/Cargo.toml
@@ -10,7 +10,9 @@ publish = false
 test = [
     "constance",
     "constance_port_arm_m",
+    "cortex-m",
     "cortex-m-rt",
+    "log",
     "panic-rtt-target",
     "rtt-target",
     "constance_test_suite",
@@ -19,7 +21,9 @@ test = [
 [dependencies]
 constance = { path = "../constance", optional = true }
 constance_port_arm_m = { path = "../constance_port_arm_m", optional = true }
+cortex-m = { version = "0.6.2", optional = true }
 cortex-m-rt = { version = "0.6.12", optional = true, features = ["device"] }
+log = { version = "0.4.8", optional = true }
 panic-rtt-target = { version = "0.1.0", features = ["cortex-m"], optional = true }
 rtt-target = { version = "0.2.0", features = ["cortex-m"], optional = true }
 
