--- a/src/constance_port_arm_m_test_runner/Cargo.toml
+++ b/src/constance_port_arm_m_test_runner/Cargo.toml
@@ -15,6 +15,7 @@ tokio = { version = "0.2.21", features = ["process", "macros", "time", "io-util"
 thiserror = "1.0.20"
 miniserde = "0.1.13"
 structopt = "0.3.15"
+arg_enum_proc_macro = "0.3.0"
 lazy_static = "1.4.0"
 probe-rs = "0.8.0"
 probe-rs-rtt = "0.3.0"
