--- a/examples/basic/Cargo.toml
+++ b/examples/basic/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 publish = false
 
 [dependencies]
-constance = { path = "../../src/constance" }
 constance_port_std = { path = "../../src/constance_port_std" }
-log = "0.4.8"
+constance = { path = "../../src/constance" }
+
+log = { version = "0.4.8" }
