--- a/src/constance_port_arm_m/Cargo.toml
+++ b/src/constance_port_arm_m/Cargo.toml
@@ -11,17 +11,18 @@ repository = "https://github.com/yvt/Constance"
 
 [dependencies]
 constance = { path = "../constance" }
+
 num-rational = { version = "0.3.0", default-features = false }
 
 # `cortex-m-rt` doesn't build on a hosted target. We don't want
 # `cargo test --all` to fail because of this, so we put these in the
 # target-specific section.
 [target."cfg(target_os = \"none\")".dependencies]
-cortex-m = "0.6.2"
 cortex-m-rt = "0.6.12"
+cortex-m = "0.6.2"
 
 [dev-dependencies]
-quickcheck = "0.9.2"
-quickcheck_macros = "0.9.1"
+quickcheck_macros = { version = "0.9.1" }
 num-integer = { version = "0.1.43", default-features = false }
-log = "0.4.8"
+quickcheck = { version = "0.9.2" }
+log = { version = "0.4.8" }
