test(port_arm_m): support a new target `qemu_mps2_an385` (MPS2+ AN385 on QEMU)

--- a/src/constance_port_arm_m_test_driver/.cargo/config.toml
+++ b/src/constance_port_arm_m_test_driver/.cargo/config.toml
@@ -1,7 +1,9 @@
-[target.thumbv7em-none-eabihf]
+[target.thumbv7m-none-eabi]
 rustflags = [
   "-C", "link-arg=-Tlink.x",
 ]
 
-[build]
-target = "thumbv7em-none-eabihf"
+[target.thumbv7em-none-eabi]
+rustflags = [
+  "-C", "link-arg=-Tlink.x",
+]
