--- a/src/constance_port_arm_m_test_driver/Cargo.toml
+++ b/src/constance_port_arm_m_test_driver/Cargo.toml
@@ -13,15 +13,23 @@ test = [
     "cortex-m",
     "cortex-m-rt",
     "log",
+    "constance_test_suite",
+]
+output-rtt = [
     "panic-rtt-target",
     "rtt-target",
-    "constance_test_suite",
+]
+output-semihosting = [
+    "cortex-m-semihosting",
+    "panic-semihosting",
 ]
 
 [dependencies]
 constance_port_arm_m = { path = "../constance_port_arm_m", optional = true }
 constance = { path = "../constance", optional = true }
 
+cortex-m-semihosting = { version = "0.3.5", optional = true }
+panic-semihosting = { version = "0.5.3", optional = true }
 panic-rtt-target = { version = "0.1.0", optional = true, features = ["cortex-m"] }
 cortex-m-rt = { version = "0.6.12", optional = true, features = ["device"] }
 rtt-target = { version = "0.2.0", optional = true, features = ["cortex-m"] }
