test(port_arm_m): check the cases where `CPU_LOCK_PRIORITY_MASK != 0`

--- a/src/constance_port_arm_m_test_driver/Cargo.toml
+++ b/src/constance_port_arm_m_test_driver/Cargo.toml
@@ -23,6 +23,7 @@ output-semihosting = [
     "cortex-m-semihosting",
     "panic-semihosting",
 ]
+cpu-lock-by-basepri = []
 
 [dependencies]
 constance_port_arm_m = { path = "../constance_port_arm_m", optional = true }
