--- a/src/constance_port_arm_m_test_runner/Cargo.toml
+++ b/src/constance_port_arm_m_test_runner/Cargo.toml
@@ -14,9 +14,10 @@ aho-corasick = "0.7.13"
 probe-rs-rtt = "0.3.0"
 lazy_static = "1.4.0"
 env_logger = "0.7.1"
-thiserror = "1.0.20"
+itertools = "0.9.0"
 miniserde = "0.1.13"
 structopt = "0.3.15"
+thiserror = "1.0.20"
 probe-rs = "0.8.0"
 tempdir = "0.3.7"
 log = "0.4.8"
