test(port_arm_m): add `rustflags` value for `thumbv7em-none-eabihf`

--- a/src/constance_port_arm_m_test_driver/.cargo/config.toml
+++ b/src/constance_port_arm_m_test_driver/.cargo/config.toml
@@ -7,3 +7,8 @@ rustflags = [
 rustflags = [
   "-C", "link-arg=-Tlink.x",
 ]
+
+[target.thumbv7em-none-eabihf]
+rustflags = [
+  "-C", "link-arg=-Tlink.x",
+]
