--- a/src/constance_test_suite/Cargo.toml
+++ b/src/constance_test_suite/Cargo.toml
@@ -18,3 +18,6 @@ tests_selective = []
 constance = { path = "../constance" }
 wyhash = "0.3.0"
 log = "0.4.8"
+
+[dev-dependencies]
+env_logger = "0.7.1"
