test(port_arm_m): add `rustflags` value for `thumbv6m-none-eabi`

--- a/src/constance_port_arm_m_test_driver/.cargo/config.toml
+++ b/src/constance_port_arm_m_test_driver/.cargo/config.toml
@@ -1,3 +1,8 @@
+[target.thumbv6m-none-eabi]
+rustflags = [
+  "-C", "link-arg=-Tlink.x",
+]
+
 [target.thumbv7m-none-eabi]
 rustflags = [
   "-C", "link-arg=-Tlink.x",
