test(port_arm_m): support a new target `qemu_mps2_an505` (MPS2+ AN505 on QEMU) and its variations

--- a/src/constance_port_arm_m_test_driver/.cargo/config.toml
+++ b/src/constance_port_arm_m_test_driver/.cargo/config.toml
@@ -17,3 +17,18 @@ rustflags = [
 rustflags = [
   "-C", "link-arg=-Tlink.x",
 ]
+
+[target.thumbv8m.base-none-eabi]
+rustflags = [
+  "-C", "link-arg=-Tlink.x",
+]
+
+[target.thumbv8m.main-none-eabi]
+rustflags = [
+  "-C", "link-arg=-Tlink.x",
+]
+
+[target.thumbv8m.main-none-eabihf]
+rustflags = [
+  "-C", "link-arg=-Tlink.x",
+]
