--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,7 +95,33 @@ jobs:
           sudo apt-get install libusb-1.0-0-dev qemu-system-arm
 
       - name: Install Additional Target of the Rust Toolchain
-        run: rustup target add thumbv6m-none-eabi thumbv7m-none-eabi
+        run: |
+          rustup target add thumbv6m-none-eabi thumbv7m-none-eabi thumbv7em-none-eabihf
+          rustup target add thumbv8m.base-none-eabi thumbv8m.main-none-eabi thumbv8m.main-none-eabihf
+
+      - name: Test (MPS2+ AN505, Armv8-M Mainline + FPU)
+        uses: actions-rs/cargo@v1
+        with:
+          command: run
+          args: -p constance_port_arm_m_test_runner -- -t qemu_mps2_an505 -l debug
+
+      - name: Test (MPS2+ AN505, Armv8-M Mainline)
+        uses: actions-rs/cargo@v1
+        with:
+          command: run
+          args: -p constance_port_arm_m_test_runner -- -t qemu_mps2_an505_v8mml -l debug
+
+      - name: Test (MPS2+ AN505, Armv8-M Baseline)
+        uses: actions-rs/cargo@v1
+        with:
+          command: run
+          args: -p constance_port_arm_m_test_runner -- -t qemu_mps2_an505_v8mbl -l debug
+
+      - name: Test (MPS2+ AN505, Armv7-M + FPU + DSP)
+        uses: actions-rs/cargo@v1
+        with:
+          command: run
+          args: -p constance_port_arm_m_test_runner -- -t qemu_mps2_an505_v7em_hf -l debug
 
       - name: Test (MPS2+ AN385, Armv7-M)
         uses: actions-rs/cargo@v1
