feat(examples): add `basic_gr_peach`
This is a bare minimum application that runs on GR-PEACH. Here is how
to start it:

    $ wget https://os.mbed.com/media/uploads/RyoheiHagimoto/renesas_gr-peach.cfg
    $ openocd -f renesas_gr-peach.cfg
    $ arm-none-eabi-gdb -iex 'target remote localhost:3333' basic_gr_peach
    (gdb) load
    (gdb) monitor cache l2x flush_all
    (gdb) monitor cache l1 d flush_all
    (gdb) monitor cache l1 i inval_all
    (gdb) c

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
 members = [
     "examples/basic",
+    "examples/basic_gr_peach",
     "examples/basic_nucleo_f401re",
     "src/constance",
     "src/constance_port_arm_m",
