feat(port_arm): add a new port for Arm-A

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "examples/basic_gr_peach",
     "examples/basic_nucleo_f401re",
     "src/constance",
+    "src/constance_port_arm",
     "src/constance_port_arm_m",
     "src/constance_port_arm_m_test_driver",
     "src/constance_port_arm_m_test_runner",
