--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -103,34 +103,34 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: run
-          args: -p constance_port_arm_m_test_runner -- -t qemu_mps2_an505 -l debug
+          args: -p constance_test_runner -- -t qemu_mps2_an505 -l debug
 
       - name: Test (MPS2+ AN505, Armv8-M Mainline)
         uses: actions-rs/cargo@v1
         with:
           command: run
-          args: -p constance_port_arm_m_test_runner -- -t qemu_mps2_an505_v8mml -l debug
+          args: -p constance_test_runner -- -t qemu_mps2_an505_v8mml -l debug
 
       - name: Test (MPS2+ AN505, Armv8-M Baseline)
         uses: actions-rs/cargo@v1
         with:
           command: run
-          args: -p constance_port_arm_m_test_runner -- -t qemu_mps2_an505_v8mbl -l debug
+          args: -p constance_test_runner -- -t qemu_mps2_an505_v8mbl -l debug
 
       - name: Test (MPS2+ AN505, Armv7-M + FPU + DSP)
         uses: actions-rs/cargo@v1
         with:
           command: run
-          args: -p constance_port_arm_m_test_runner -- -t qemu_mps2_an505_v7em_hf -l debug
+          args: -p constance_test_runner -- -t qemu_mps2_an505_v7em_hf -l debug
 
       - name: Test (MPS2+ AN385, Armv7-M)
         uses: actions-rs/cargo@v1
         with:
           command: run
-          args: -p constance_port_arm_m_test_runner -- -t qemu_mps2_an385 -l debug
+          args: -p constance_test_runner -- -t qemu_mps2_an385 -l debug
 
       - name: Test (MPS2+ AN385, Armv6-M)
         uses: actions-rs/cargo@v1
         with:
           command: run
-          args: -p constance_port_arm_m_test_runner -- -t qemu_mps2_an385_v6m -l debug
+          args: -p constance_test_runner -- -t qemu_mps2_an385_v6m -l debug
