feat(arm_semihosting): fork from `cortex-m-semihosting` to support non-Thumb targets

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ members = [
     "examples/basic",
     "examples/basic_gr_peach",
     "examples/basic_nucleo_f401re",
+    "src/arm_semihosting",
     "src/constance",
     "src/constance_port_arm",
     "src/constance_port_arm_m",
