--- a/src/constance_port_arm/Cargo.toml
+++ b/src/constance_port_arm/Cargo.toml
@@ -12,5 +12,13 @@ repository = "https://github.com/yvt/Constance"
 [dependencies]
 constance = { path = "../constance" }
 
+num-rational = { version = "0.3.0", default-features = false }
 register = "0.5.1"
 r0 = "0.2.2"
+
+[dev-dependencies]
+quickcheck_macros = { version = "0.9.1" }
+num-integer = { version = "0.1.43", default-features = false }
+env_logger = { version = "0.7.1" }
+quickcheck = { version = "0.9.2" }
+log = { version = "0.4.8" }
