--- a/src/constance_port_arm/Cargo.toml
+++ b/src/constance_port_arm/Cargo.toml
@@ -21,4 +21,5 @@ quickcheck_macros = { version = "0.9.1" }
 num-integer = { version = "0.1.43", default-features = false }
 env_logger = { version = "0.7.1" }
 quickcheck = { version = "0.9.2" }
+itertools = { version = "0.9.0" }
 log = { version = "0.4.8" }
