--- a/src/constance_portkit/Cargo.toml
+++ b/src/constance_portkit/Cargo.toml
@@ -9,3 +9,14 @@ keywords = ["constance", "simulator"]
 repository = "https://github.com/yvt/Constance"
 
 [dependencies]
+constance = { path = "../constance" }
+
+num-rational = { version = "0.3.0", default-features = false }
+
+[dev-dependencies]
+quickcheck_macros = { version = "0.9.1" }
+num-integer = { version = "0.1.43", default-features = false }
+env_logger = { version = "0.7.1" }
+quickcheck = { version = "0.9.2" }
+itertools = { version = "0.9.0" }
+log = { version = "0.4.8" }
