--- a/src/constance_port_riscv/Cargo.toml
+++ b/src/constance_port_riscv/Cargo.toml
@@ -13,5 +13,5 @@ repository = "https://github.com/yvt/Constance"
 constance_portkit = { path = "../constance_portkit" }
 constance = { path = "../constance" }
 
-register = "0.5.1"
-r0 = "0.2.2"
+register = { version = "0.5.1" }
+riscv-rt = { version = "0.8.0" }
