--- a/src/constance_port_riscv_test_driver/Cargo.toml
+++ b/src/constance_port_riscv_test_driver/Cargo.toml
@@ -12,18 +12,25 @@ test = [
     "constance_port_riscv",
     "constance",
     "riscv-rt",
+    "riscv",
     "log",
 ]
-output-htif = [
-    # "riscv_htif"
+output-e310x-uart = [
+    "e310x-hal",
+    "output-uart",
+    "nb",
 ]
+output-uart = []
 
 [dependencies]
 constance_port_riscv = { path = "../constance_port_riscv", optional = true }
 constance = { path = "../constance", optional = true }
 
+e310x-hal = { version = "0.8.3", optional = true, features = ["g002"] }
 riscv-rt = { version = "0.8.0", optional = true }
+riscv = { version = "0.6.0", optional = true }
 log = { version = "0.4.8", optional = true }
+nb = { version = "0.1.3", optional = true }
 
 [dependencies.constance_test_suite]
 path = "../constance_test_suite"
