--- a/src/constance_port_riscv_test_driver/Cargo.toml
+++ b/src/constance_port_riscv_test_driver/Cargo.toml
@@ -21,6 +21,9 @@ output-e310x-uart = [
     "nb",
 ]
 output-uart = []
+interrupt-e310x = [
+    "e310x",
+]
 
 [dependencies]
 constance_port_riscv = { path = "../constance_port_riscv", optional = true }
@@ -28,6 +31,7 @@ constance = { path = "../constance", optional = true }
 
 e310x-hal = { version = "0.8.3", optional = true, features = ["g002"] }
 riscv-rt = { version = "0.8.0", optional = true }
+e310x = { version = "0.8.1", optional = true }
 riscv = { version = "0.6.0", optional = true }
 log = { version = "0.4.8", optional = true }
 nb = { version = "0.1.3", optional = true }
