chore(ci): use a bash script to execute `constance_test_runner`
Fixes the issue in which `qemu-system-riscv32` refuses to start with the
following error:

    qemu-system-riscv32: -serial file:/dev/stderr: Could not open '/dev/stderr': No such device or address
    qemu-system-riscv32: -serial file:/dev/stderr: could not connect serial device to character backend 'file:/dev/stderr'

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -166,7 +166,5 @@ jobs:
           rustup target add riscv32imac-unknown-none-elf
 
       - name: Test (SiFive E, RV32IMAC)
-        uses: actions-rs/cargo@v1
-        with:
-          command: run
-          args: -p constance_test_runner -- -t qemu_sifive_e -l debug
+        run: |
+          cargo run -p constance_test_runner -- -t qemu_sifive_e -l debug
