feat(test_runner): pass the current test category as a Cargo feature
The interfaces for `kernel_tests` and `kernel_benchmarks` are very
alike, so being able to switch driver implementations by `#[cfg(...)]`
would be convenient.

--- a/src/constance_port_arm_test_driver/Cargo.toml
+++ b/src/constance_port_arm_test_driver/Cargo.toml
@@ -7,7 +7,8 @@ license = "MIT OR Apache-2.0"
 publish = false
 
 [features]
-test = [
+kernel_tests = ["run"]
+run = [
     "constance_test_suite",
     "constance_port_arm",
     "constance",
