--- a/src/constance_port_arm_m_test_driver/Cargo.toml
+++ b/src/constance_port_arm_m_test_driver/Cargo.toml
@@ -7,7 +7,8 @@ license = "MIT OR Apache-2.0"
 publish = false
 
 [features]
-test = [
+kernel_tests = ["run"]
+run = [
     "constance",
     "constance_port_arm_m",
     "cortex-m",
