--- a/src/constance_port_arm_m_test_driver/Cargo.toml
+++ b/src/constance_port_arm_m_test_driver/Cargo.toml
@@ -7,6 +7,7 @@ license = "MIT OR Apache-2.0"
 publish = false
 
 [features]
+kernel_benchmarks = ["run"]
 kernel_tests = ["run"]
 run = [
     "constance",
