--- a/src/constance_test_suite/Cargo.toml
+++ b/src/constance_test_suite/Cargo.toml
@@ -16,8 +16,16 @@ tests_selective = []
 
 [dependencies]
 constance = { path = "../constance" }
-wyhash = "0.3.0"
-log = "0.4.8"
+
+staticvec = { version = "0.10.2", default-features = false }
+wyhash = { version = "0.3.0" }
+log = { version = "0.4.8" }
+
+[dependencies.try-lock]
+# - “Make `TryLock::new` `const fn`”
+#   <https://github.com/seanmonstar/try-lock/pull/2>
+git = "https://github.com/yvt/try-lock.git"
+rev = "cf06bc26a49d511bec22aa36fb68a882e8713d3b"
 
 [dev-dependencies]
 env_logger = "0.7.1"
