--- a/src/constance_test_suite/Cargo.toml
+++ b/src/constance_test_suite/Cargo.toml
@@ -28,4 +28,6 @@ git = "https://github.com/yvt/try-lock.git"
 rev = "cf06bc26a49d511bec22aa36fb68a882e8713d3b"
 
 [dev-dependencies]
+quickcheck_macros = "0.9.1"
 env_logger = "0.7.1"
+quickcheck = "0.9.2"
