feat(test_runner): halt core when accessing RTT if necessary
> The RISC-V External Debug Support specification 0.13 (to which FE310
> conforms) doesn't define any abstract command for memory access, so
> the hart should be halted every time we access RTT.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,11 @@ members = [
     "src/constance_test_runner",
     "src/constance_test_suite",
 ]
+
+[patch.crates-io.probe-rs]
+# Chose a commit from the narrow window in which `probe-rs` isn't affected by
+# <https://github.com/probe-rs/probe-rs/issues/352> and at the same time
+# includes <https://github.com/probe-rs/probe-rs/pull/311> (the fix for another
+# issue that affects us).
+git = "https://github.com/probe-rs/probe-rs.git"
+rev = "8bb53577ccee46550c0b688dfc2d13c1cd896083"
