--- a/src/constance_support_rza1/Cargo.toml
+++ b/src/constance_support_rza1/Cargo.toml
@@ -11,6 +11,7 @@ repository = "https://github.com/yvt/Constance"
 
 [dependencies]
 constance_port_arm = { path = "../constance_port_arm" }
+constance_portkit = { path = "../constance_portkit" }
 constance = { path = "../constance" }
 
 register = "0.5.1"
