test(port_arm): have one Cargo feature per target

--- a/src/constance_port_arm_test_driver/Cargo.toml
+++ b/src/constance_port_arm_test_driver/Cargo.toml
@@ -15,8 +15,13 @@ run = [
     "constance",
     "log",
 ]
+
+board-realview_pbx_a9 = [
+    "output-semihosting",
+]
+
 output-semihosting = [
-    "arm_semihosting"
+    "arm_semihosting",
 ]
 
 [dependencies]
