test(port_arm): add device drivers to run `constance_port_arm_test_driver` on RZ/A1
I decided to redirect log output to UART because semihosting was so slow
that it could have affected the results of timing-sensitive tests.
Another reason was that I couldn't find a way to get OpenOCD to handle
two separate output streams (stdout/stderr) while keeping them
separated until they reach `constance_test_runner`.

UART is working. Semihosting is working but unstable.
`constance_test_runner` doesn't support running tests on GR-PEACH yet.
Here's how to do it manually:

    $ wget https://os.mbed.com/media/uploads/RyoheiHagimoto/renesas_gr-peach.cfg
    $ openocd -f renesas_gr-peach.cfg &
    $ cargo run -p constance_test_runner -- -t gr_peach -l trace basic
    ^C (quit QEMU)
    $ arm-none-eabi-gdb -iex 'target remote localhost:3333' target/armv7a-none-eabi/release/constance_port_arm_test_driver
    (gdb) mon reset halt
    (gdb) mon mwb 0xFCFE0400 0xff
    (gdb) mon mwb 0xFCFE0404 0xff
    (gdb) mon mwb 0xFCFE0408 0xff
    (gdb) load
    (gdb) mon arm semihosting enable
    (gdb) c

You should see `!- TEST WAS SUCCESSFUL -!` in the stdout of `openocd`.
If you opened a serial console configured with baud rate 115200, you
should also see a greeting message in it.

--- a/src/constance_port_arm_test_driver/Cargo.toml
+++ b/src/constance_port_arm_test_driver/Cargo.toml
@@ -13,11 +13,16 @@ run = [
     "constance_test_suite",
     "constance_port_arm",
     "constance",
+    "register",
     "log",
 ]
 
 board-realview_pbx_a9 = [
     "output-semihosting",
+]
+board-rza1 = [
+    "output-semihosting",
+    "constance_support_rza1",
 ]
 
 output-semihosting = [
@@ -25,10 +30,12 @@ output-semihosting = [
 ]
 
 [dependencies]
+constance_support_rza1 = { path = "../constance_support_rza1", optional = true }
 constance_port_arm = { path = "../constance_port_arm", optional = true }
 arm_semihosting = { path = "../arm_semihosting", optional = true }
 constance = { path = "../constance", optional = true }
 
+register = { version = "0.5.1", optional = true }
 log = { version = "0.4.8", optional = true }
 
 [dependencies.constance_test_suite]
