perf(port_riscv): disable register preloading by default
Reduces the time taken to activate a task by 95–101 cycles (measured on
FE310).

--- a/src/constance_port_riscv/Cargo.toml
+++ b/src/constance_port_riscv/Cargo.toml
@@ -11,6 +11,7 @@ repository = "https://github.com/yvt/Constance"
 
 [features]
 emulate-lr-sc = []
+preload-registers = []
 
 [dependencies]
 constance_portkit = { path = "../constance_portkit" }
