refactor(support_rza1): use `::rza1` to access memory-mapped registers

--- a/src/constance_support_rza1/Cargo.toml
+++ b/src/constance_support_rza1/Cargo.toml
@@ -14,4 +14,4 @@ constance_port_arm = { path = "../constance_port_arm" }
 constance_portkit = { path = "../constance_portkit" }
 constance = { path = "../constance" }
 
-register = "0.5.1"
+rza1 = { version = "0.2.0", features = ["ostm"] }
