--- a/src/constance_port_arm_test_driver/Cargo.toml
+++ b/src/constance_port_arm_test_driver/Cargo.toml
@@ -23,6 +23,7 @@ board-realview_pbx_a9 = [
 board-rza1 = [
     "output-semihosting",
     "constance_support_rza1",
+    "rza1",
 ]
 
 output-semihosting = [
@@ -38,6 +39,7 @@ constance = { path = "../constance", optional = true }
 
 staticvec = { version = "0.10.2", optional = true, default-features = false }
 register = { version = "0.5.1", optional = true }
+rza1 = { version = "0.2.0", optional = true, features = ["cpg", "gpio", "scif"] }
 log = { version = "0.4.8", optional = true }
 
 [dependencies.constance_test_suite]
