perf(port_arm): disable register preloading by default
Reduces the time taken to activate a task by 25-49 cycles (measured on
RZ/A1H).

--- a/src/constance_port_arm/Cargo.toml
+++ b/src/constance_port_arm/Cargo.toml
@@ -9,6 +9,9 @@ categories = ["embedded", "no-std"]
 keywords = ["constance", "arm"]
 repository = "https://github.com/yvt/Constance"
 
+[features]
+preload-registers = []
+
 [dependencies]
 constance_portkit = { path = "../constance_portkit" }
 constance = { path = "../constance" }
