--- a/src/constance_port_riscv_test_driver/.cargo/config.toml
+++ b/src/constance_port_riscv_test_driver/.cargo/config.toml
@@ -3,3 +3,13 @@ rustflags = [
   "-C", "link-arg=-Tmemory.x",
   "-C", "link-arg=-Tlink.x",
 ]
+[target.riscv64imac-unknown-none-elf]
+rustflags = [
+  "-C", "link-arg=-Tmemory.x",
+  "-C", "link-arg=-Tlink.x",
+]
+[target.riscv64gc-unknown-none-elf]
+rustflags = [
+  "-C", "link-arg=-Tmemory.x",
+  "-C", "link-arg=-Tlink.x",
+]
