chore(ci): build QEMU 5.1.0 from source
`4.2-3ubuntu6.4` has a bug in which SiFive CLINT does not support 64-bit
register access, causing our RISC-V timer driver to crash on a RV64
target. The fix [1] was merged somewhere between 5.0.0 and 5.1.0-rc0.

[1]: https://git.qemu.org/?p=qemu.git;a=commit;h=70b78d4e7

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -159,7 +159,16 @@ jobs:
       - name: Install Dependencies (Linux)
         run: |
           sudo apt-get update
-          sudo apt-get install libusb-1.0-0-dev qemu-system-riscv32
+          sudo apt-get install libusb-1.0-0-dev
+
+      - name: Install QEMU 5.1.0 from Source
+        run: |
+          wget --no-verbose https://download.qemu.org/qemu-5.1.0.tar.xz
+          tar -xf qemu-5.1.0.tar.xz
+          cd qemu-5.1.0
+          ./configure --target-list=riscv32-softmmu,riscv64-softmmu
+          make -j $(nproc)
+          sudo make install
 
       - name: Install Additional Target of the Rust Toolchain
         run: |
